<resources>
    <string name="app_name">DOB Calculator</string>
    <string name="calculate_your">CALCULATE YOUR</string>
    <string name="age">AGE</string>
    <string name="in_minutes">IN MINUTES</string>
    <string name="select_date">SELECT DATE</string>
    <string name="dash">-</string>
    <string name="selected_date">SELECTED DATE</string>
    <string name="age_in_seconds">AGE IN SECONDS</string>
    <string name="age_in_minutes">AGE IN MINUTES</string>
    <string name="age_in_hours">AGE IN HOURS</string>
</resources>